# ttyd

./: .gitignore  ask.py  benchmark.py  compact_rl.py  compare_test.py  crl_grammar_spec.py  llm_runner.py  pyproject.toml  run_25_tests.py  run_25_tests_crl.py  setup_db.py  test_compact_rl.py  test_queries.py  web.py
golden/: above_avg_mrr.yaml  arr_addon.yaml  arr_excl_apac.yaml  arr_excl_pre2025.yaml  arr_expiring_2025.yaml  arr_midmarket_us.yaml  arr_multi_sub.yaml  arr_pct_enterprise.yaml  arr_total.yaml  avg_enterprise_standard.yaml  avg_mrr.yaml  avg_order_by_segment.yaml  avg_order_by_segment_ent_mm.yaml  avg_spend_per_customer.yaml  count_by_size_tier.yaml  customers_above_10k.yaml  customers_above_5k.yaml  customers_emea.yaml  emea_q1_2025.yaml  highest_growth_month.yaml  large_deals_march.yaml  max_order.yaml  most_orders_customer.yaml  net_mrr_change.yaml  region_most_subs.yaml  rev_by_region.yaml  rev_excl_below_500.yaml  rev_jan_feb.yaml  rev_march_vs_jan.yaml  rev_repeat_customers.yaml  small_orders_2024.yaml  strategic_deals_count.yaml  top3_by_spend.yaml  transactional_total.yaml  unique_customers_march.yaml
models/: arr.river  completed_orders.river  customer.river  customer_monthly_mrr.river  monthly_recognized_subs.river  mrr_movements.river  nrr.river  order.river  product.river  qualifying_subs.river  revenue.river  subscription.river
policies/: customer_health.river  order_classification.river  revenue_analytics.river  subscription_arr.river
runs/20260407_071254/: arr_excl_apac.yaml  arr_excl_pre2025.yaml  arr_expiring_2025.yaml  arr_total.yaml  (+22 more)
(+17 files in other folders)
